test/langtools/tools/javac/patterns/CastConversionMatch.out
CastConversionMatch.java:11:26: compiler.err.preview.feature.disabled.plural: (compiler.misc.feature.primitive.patterns)
1 error
